Update notebook and scripts, ignore local model files

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "18516bc8-8655-41e4-aa22-36f2a8b98042",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1939d9f6-ed65-4f21-bd50-dc32d03dc914",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "id": "31c73c95",
    "metadata": {},
    "outputs": [
@@ -357,16 +357,13 @@
    "id": "efaf69d7",
    "metadata": {},
    "source": [
-    "garder quoted_status.extended_tweet.full_text et quoted_status.user.name ? quoted_status.retweet_count et quoted_status.favorite_count? \n",
-    "éventuellement regarder quoted_status.user.friends_count et quoted_status.user.favourites_count et quoted_status.user.followers_count\n",
-    "\n",
-    "garder retweet_count, favorite_count, text, quote_count, reply_count\n",
-    "puis user"
+    "quoted_status.retweet_count et quoted_status.favorite_count\n",
+    "éventuellement regarder quoted_status.user.friends_count et quoted_status.user.favourites_count et quoted_status.user.followers_count\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "50c3d5e4",
    "metadata": {},
    "outputs": [
@@ -376,9 +373,9 @@
      "text": [
       "in_reply_to_status_id_str                                                                            NaN\n",
       "in_reply_to_status_id                                                                                NaN\n",
-      "created_at                                                                     2021-03-17 13:01:59+00:00\n",
+      "created_at                                                                     2021-03-17 13:02:06+00:00\n",
       "in_reply_to_user_id_str                                                                              NaN\n",
-      "source                                                 <a href=\"http://twitter.com/download/iphone\" r...\n",
+      "source                                                 <a href=\"https://mobile.twitter.com\" rel=\"nofo...\n",
       "quoted_status_id                                                                   1372170826334756864.0\n",
       "retweet_count                                                                                          0\n",
       "retweeted                                                                                          False\n",
@@ -386,21 +383,21 @@
       "filter_level                                                                                         low\n",
       "in_reply_to_screen_name                                                                             None\n",
       "is_quote_status                                                                                     True\n",
-      "id_str                                                                               1372171356809400320\n",
+      "id_str                                                                               1372171385049604096\n",
       "in_reply_to_user_id                                                                                  NaN\n",
       "favorite_count                                                                                         0\n",
-      "text                                                                             C’est exactement ça ...\n",
+      "text                                                   Depuis un certain temps, Le Gorafi n'a même pl...\n",
       "place                                                                                                NaN\n",
       "lang                                                                                                  fr\n",
       "quote_count                                                                                            0\n",
       "favorited                                                                                          False\n",
       "coordinates                                                                                          NaN\n",
       "truncated                                                                                          False\n",
-      "timestamp_ms                                                                  2021-03-17 13:01:59.831000\n",
+      "timestamp_ms                                                                  2021-03-17 13:02:06.564000\n",
       "reply_count                                                                                            0\n",
       "quoted_status_id_str                                                               1372170826334756864.0\n",
       "contributors                                                                                         NaN\n",
-      "challenge_id                                                                                           1\n",
+      "challenge_id                                                                                           3\n",
       "extended_tweet                                                                                       NaN\n",
       "display_text_range                                                                                   NaN\n",
       "possibly_sensitive                                                                                   NaN\n",
@@ -417,21 +414,21 @@
       "quoted_status.created_at                                                  Wed Mar 17 12:59:53 +0000 2021\n",
       "quoted_status.in_reply_to_user_id_str                                                               None\n",
       "quoted_status.source                                   <a href=\"https://about.twitter.com/products/tw...\n",
-      "quoted_status.retweet_count                                                                         43.0\n",
+      "quoted_status.retweet_count                                                                         46.0\n",
       "quoted_status.retweeted                                                                            False\n",
       "quoted_status.geo                                                                                    NaN\n",
       "quoted_status.filter_level                                                                           low\n",
       "quoted_status.in_reply_to_screen_name                                                               None\n",
       "quoted_status.is_quote_status                                                                      False\n",
       "quoted_status.id_str                                                                 1372170826334756865\n",
-      "Name: 0, dtype: object\n",
+      "Name: 1, dtype: object\n",
       "quoted_status.in_reply_to_user_id                                                                      NaN\n",
-      "quoted_status.favorite_count                                                                         124.0\n",
+      "quoted_status.favorite_count                                                                         136.0\n",
       "quoted_status.id                                                                     1372170826334756864.0\n",
       "quoted_status.text                                       #Direct Jean Castex et Olivier Véran annoncero...\n",
       "quoted_status.place                                                                                    NaN\n",
       "quoted_status.lang                                                                                      fr\n",
-      "quoted_status.quote_count                                                                              2.0\n",
+      "quoted_status.quote_count                                                                              3.0\n",
       "quoted_status.favorited                                                                              False\n",
       "quoted_status.coordinates                                                                              NaN\n",
       "quoted_status.truncated                                                                               True\n",
@@ -475,7 +472,7 @@
       "quoted_status.user.followers_count                                                               1338833.0\n",
       "quoted_status.user.profile_use_background_image                                                       True\n",
       "quoted_status.user.default_profile                                                                    True\n",
-      "Name: 0, dtype: object\n",
+      "Name: 1, dtype: object\n",
       "quoted_status.user.following                                                                   NaN\n",
       "quoted_status.user.name                                                                  Le Gorafi\n",
       "quoted_status.user.location                                            Paris, New-York, Montmartre\n",
@@ -483,41 +480,41 @@
       "quoted_status.user.notifications                                                               NaN\n",
       "quoted_status_permalink.expanded                 https://twitter.com/le_gorafi/status/137217082...\n",
       "quoted_status_permalink.display                                        twitter.com/le_gorafi/stat…\n",
-      "quoted_status_permalink.url                                                https://t.co/0Ikn7cFQbx\n",
+      "quoted_status_permalink.url                                                https://t.co/oXB4MJFd5q\n",
       "entities.urls                                                                                   []\n",
       "entities.hashtags                                                                               []\n",
       "entities.user_mentions                                                                          []\n",
       "entities.symbols                                                                                []\n",
       "user.utc_offset                                                                               None\n",
-      "user.profile_image_url_https                     https://pbs.twimg.com/profile_images/136637646...\n",
-      "user.listed_count                                                                                5\n",
+      "user.profile_image_url_https                     https://pbs.twimg.com/profile_images/116995848...\n",
+      "user.listed_count                                                                                1\n",
       "user.profile_background_image_url                                                                 \n",
       "user.default_profile_image                                                                   False\n",
-      "user.favourites_count                                                                        14154\n",
-      "user.description                                 👨🏻‍💻 Conseiller patrimonial @axafrance 🏃🏻‍♂️ R...\n",
-      "user.created_at                                                     Sun Dec 03 16:44:36 +0000 2017\n",
+      "user.favourites_count                                                                         8582\n",
+      "user.description                                 🇵🇹 Journaliste et secrétaire de rédaction @gau...\n",
+      "user.created_at                                                     Fri Sep 06 12:59:06 +0000 2019\n",
       "user.is_translator                                                                           False\n",
       "user.profile_background_image_url_https                                                           \n",
       "user.protected                                                                               False\n",
       "user.profile_link_color                                                                     1DA1F2\n",
       "user.translator_type                                                                          none\n",
-      "user.geo_enabled                                                                              True\n",
+      "user.geo_enabled                                                                             False\n",
       "user.profile_background_color                                                               F5F8FA\n",
       "user.lang                                                                                     None\n",
       "user.profile_sidebar_border_color                                                           C0DEED\n",
       "user.profile_text_color                                                                     333333\n",
-      "user.profile_image_url                           http://pbs.twimg.com/profile_images/1366376468...\n",
+      "user.profile_image_url                           http://pbs.twimg.com/profile_images/1169958485...\n",
       "user.time_zone                                                                                None\n",
-      "user.url                                                          http://linkedin.com/in/mamiloudi\n",
+      "user.url                                                                   http://www.gauchebdo.ch\n",
       "user.contributors_enabled                                                                    False\n",
       "user.profile_background_tile                                                                 False\n",
-      "user.profile_banner_url                          https://pbs.twimg.com/profile_banners/93736193...\n",
-      "user.statuses_count                                                                            333\n",
+      "user.profile_banner_url                          https://pbs.twimg.com/profile_banners/11699580...\n",
+      "user.statuses_count                                                                           3028\n",
       "user.follow_request_sent                                                                      None\n",
       "user.profile_use_background_image                                                             True\n",
       "user.default_profile                                                                          True\n",
       "user.following                                                                                None\n",
-      "user.location                                                                        Paris - Alger\n",
+      "user.location                                                                  Geneva, Switzerland\n",
       "user.profile_sidebar_fill_color                                                             DDEEF6\n",
       "user.notifications                                                                            None\n",
       "quoted_status                                                                                  NaN\n",
@@ -526,7 +523,7 @@
       "extended_tweet.entities.hashtags                                                               NaN\n",
       "extended_tweet.entities.user_mentions                                                          NaN\n",
       "extended_tweet.entities.symbols                                                                NaN\n",
-      "Name: 0, dtype: object\n",
+      "Name: 1, dtype: object\n",
       "extended_tweet.full_text                                NaN\n",
       "extended_tweet.display_text_range                       NaN\n",
       "quoted_status.possibly_sensitive                        NaN\n",
@@ -569,16 +566,16 @@
       "coordinates.coordinates                                 NaN\n",
       "coordinates.type                                        NaN\n",
       "quoted_status.withheld_in_countries                     NaN\n",
-      "Name: 0, dtype: object\n"
+      "Name: 1, dtype: object\n"
      ]
     }
    ],
    "source": [
     "#print \n",
-    "print(X_train.iloc[0, :50])\n",
-    "print(X_train.iloc[0, 50:100])\n",
-    "print(X_train.iloc[0, 100:150])\n",
-    "print(X_train.iloc[0, 150:])"
+    "print(X_train.iloc[1, :50])\n",
+    "print(X_train.iloc[1, 50:100])\n",
+    "print(X_train.iloc[1, 100:150])\n",
+    "print(X_train.iloc[1, 150:])"
    ]
   },
   {
