Fix metadata dimension mismatch and update log transforms

--- a/kaggle_submission.ipynb
+++ b/kaggle_submission.ipynb
@@ -305,7 +305,14 @@
     "    test_features = df_test.apply(extract_features_from_row, axis=1)\n",
     "    \n",
     "    # Transformation Logarithmique pour certaines colonnes numériques\n",
-    "    log_cols = ['user_statuses_count', 'user_favourites_count', 'user_listed_count']\n",
+    "    log_cols = [\n",
+    "        'user_statuses_count', \n",
+    "        'user_favourites_count', \n",
+    "        'user_listed_count',\n",
+    "        'quoted_favorite_count',\n",
+    "        'quoted_quote_count',\n",
+    "        'quoted_user_listed_count'\n",
+    "    ]\n",
     "    for col in log_cols:\n",
     "        train_features[col] = np.log1p(train_features[col])\n",
     "        test_features[col] = np.log1p(test_features[col])\n",
